<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_curso"
            android:icon="@drawable/ic_baseline_video_library_24"
            android:title="@string/menu_curso" />
        <item
            android:id="@+id/nav_comunidade"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/menu_comunidade" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_comment_24"
            android:title="@string/menu_chat"
            />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/perfil"/>
        <item
            android:id="@+id/nav_geruser"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_gerenciarUser"
            android:visible="false" />
    </group>
    <group>
        <item android:title="@string/sub_menu">
            <menu>
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/menu_exit"
                    />
            </menu>
        </item>
    </group>
</menu>