<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".navigation.ui.chat.ChatFragment">

    <EditText
        android:id="@+id/edtMsg"
        android:layout_width="269dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/containerinputchat"
        android:ems="10"
        android:hint="Manda a boa"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/layout1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEnviar"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnEnviar"
        android:layout_width="98dp"
        android:layout_height="61dp"
        android:layout_marginStart="292dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/ic_baseline_send_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/laybtnm"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtSelect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/chat"
            android:text="@string/botmchat1"></TextView>


        <LinearLayout
            android:id="@+id/layBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="197dp">


            <Button
                android:id="@+id/btnDuvida"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/purple3"
                android:text="@string/b2" />

            <Button
                android:id="@+id/btnSuporte"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/purple3"
                android:text="@string/b1" />



        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="375dp"
        android:layout_height="439dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/containerchat"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Benvenuto"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="@color/chat"
                android:text="@string/bemvindo"></TextView>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="112dp"
        android:text="@string/finala"
        android:backgroundTint="@color/purple3"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>