<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".navigation.ui.cursos.CursosFragment"
    tools:ignore="SpeakableTextPresentCheck"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

        <TextView
            android:id="@+id/textViewCursoHardware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/curso_hardware"
            android:textSize="50dp"
            />

        <ImageView
            android:id="@+id/imgHardware"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/textViewCursoHardware"
            android:src="@drawable/ic_baseline_hardware_24" />

        <TextView
            android:id="@+id/textViewCursoLP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgHardware"
            android:layout_marginTop="40dp"
            android:text="@string/curso_lp"
            android:textSize="50dp" />
        <ImageView
            android:id="@+id/imgLP"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textViewCursoLP"
            android:src="@drawable/ic_baseline_important_devices_24"
            />
        <TextView
            android:id="@+id/textViewCursoBD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLP"
            android:layout_marginTop="40dp"
            android:text="@string/curso_db"
            android:textSize="50dp"
            />
        <ImageView
            android:id="@+id/imgDB"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textViewCursoBD"
            android:layout_marginBottom="50dp"
            android:src="@drawable/curso_banco_de_dados"
            />


    </RelativeLayout>



</ScrollView>

