<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".navigation.ui.cursos.containervideos.PlayerActivity">
    <RelativeLayout
        android:id="@+id/container_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        >
        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:use_controller="true"
            app:player_layout_id="@layout/exo_player_view"
            app:controller_layout_id="@layout/controller_video"
            />
        <ProgressBar
            android:id="@+id/progress_bar_player"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_tudo"
        android:background="@drawable/containersettingsvideo"
        android:layout_below="@+id/container_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/container_info_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_below="@+id/container_player">
        <TextView
            android:id="@+id/tittle_videoPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_player"
            android:text="@string/example"
            android:textSize="25sp"
            android:maxLines="2"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/subtittle_videoPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tittle_videoPlayer"
            android:text="@string/examplesub"
            android:textSize="15sp"
            />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/container_settings_video"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_info_video"
            android:padding="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/like"
                android:src="@drawable/like"
                android:layout_marginLeft="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:id="@+id/deslike"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/deslike"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/text_proximaaula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="115dp"
                android:text="Proxima Aula"/>
            <ImageView
                android:id="@+id/img_proximaaula"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_right_alt_24"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/container_comentarios"
            android:background="@drawable/containersettingsvideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <LinearLayout
                    android:id="@+id/container_input_menssage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    >
                <EditText
                    android:id="@+id/iputMensage"
                    android:background="@drawable/containerinputcomenter"
                    android:hint="@string/example_comenter"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="40dp"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/layout"
                    />
                <ImageView
                    android:id="@+id/sendMensage"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_send_24"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comentariosexemplo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="8dp"
                android:paddingBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:listitem="@layout/container_coment" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>